Code cleanup for calling commands from within commands, allo -e option there